Address issues with Sidebar.js Fix Link issues and alignment issues with Sidebar.js component

--- a/src/components/features/Sidebar/Sidebar.css
+++ b/src/components/features/Sidebar/Sidebar.css
@@ -37,9 +37,7 @@
 
 .menu {
     color: #FFFFFF;
-    position: absolute;
-    top: 20%;
-    left: 40%;
+    margin-top: 200px;
     align-items: center;
     display: flex;
     flex-direction: column;
